; ModuleID = '/home/carl/AnghaBench/systemd/src/test/extr_test-socket-util.c_test_in_addr_prefix_intersect_one.c'
source_filename = "/home/carl/AnghaBench/systemd/src/test/extr_test-socket-util.c_test_in_addr_prefix_intersect_one.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%union.in_addr_union = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*, i32, i8*, i32, i32)* @test_in_addr_prefix_intersect_one to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_in_addr_prefix_intersect_one(i32 %0, i8* %1, i32 %2, i8* %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca %union.in_addr_union, align 4
  %14 = alloca %union.in_addr_union, align 4
  store i32 %0, i32* %7, align 4
  store i8* %1, i8** %8, align 8
  store i32 %2, i32* %9, align 4
  store i8* %3, i8** %10, align 8
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %15 = load i32, i32* %7, align 4
  %16 = load i8*, i8** %8, align 8
  %17 = call i64 @in_addr_from_string(i32 %15, i8* %16, %union.in_addr_union* %13)
  %18 = icmp sge i64 %17, 0
  %19 = zext i1 %18 to i32
  %20 = call i32 @assert_se(i32 %19)
  %21 = load i32, i32* %7, align 4
  %22 = load i8*, i8** %10, align 8
  %23 = call i64 @in_addr_from_string(i32 %21, i8* %22, %union.in_addr_union* %14)
  %24 = icmp sge i64 %23, 0
  %25 = zext i1 %24 to i32
  %26 = call i32 @assert_se(i32 %25)
  %27 = load i32, i32* %7, align 4
  %28 = load i32, i32* %9, align 4
  %29 = load i32, i32* %11, align 4
  %30 = call i32 @in_addr_prefix_intersect(i32 %27, %union.in_addr_union* %13, i32 %28, %union.in_addr_union* %14, i32 %29)
  %31 = load i32, i32* %12, align 4
  %32 = icmp eq i32 %30, %31
  %33 = zext i1 %32 to i32
  %34 = call i32 @assert_se(i32 %33)
  ret void
}

declare dso_local i32 @assert_se(i32) #1

declare dso_local i64 @in_addr_from_string(i32, i8*, %union.in_addr_union*) #1

declare dso_local i32 @in_addr_prefix_intersect(i32, %union.in_addr_union*, i32, %union.in_addr_union*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
